# qufoods

./: .env.example  .gitignore  README.md  requirements.txt
database/: README.md
exploration/: DATA_QUALITY_LOG.md  HANDOFF.md  README.md  pyproject.toml  run_pipeline.py
exploration/data/reference/: reference_branches.csv  reference_menu_items.csv
exploration/data/sample_batches/: batch_BATCH-96bd24c2_20260617T154538Z.json
exploration/notebooks/: 01_exploration.ipynb
exploration/src/exploration/: __init__.py  branch_repair.py  cleaning.py  imputation.py  ingest.py  pipeline.py  profiling.py  reference.py
exploration/tests/: test_cleaning.py  test_imputation.py  test_profiling.py  test_reference_and_repair.py
lambda/: README.md
streamlit/: README.md
