[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qufoods-exploration"
version = "0.1.0"
description = "QuFoods data pipeline lab - exploration, profiling, cleaning, and imputation logic"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "boto3>=1.34",
    "requests>=2.31",
    "rapidfuzz>=3.6",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
